js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib1/l1.4.kt
class MyClass {
    companion object {
        val stringProperty = "-1"
        val intProperty = 2
        val pairProperty = -1 to 2
        val funcProperty = { 1 }
    }
}
